--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1960,7 +1960,7 @@
 "save_to_my_lifebox_folder_not_found" = "لا توجد ملفات في هذا المجلد.";
 "grace_banner_title" = "فشل عملية الدفع!";
 "grace_banner_desc" = "قد يكون رصيد بطاقة الخصم / الائتمان الخاصة بك غير كافٍ أو قد تكون معلومات بطاقتك قد تغيرت.";
-"grace_expire_date" = "تاريخ تعليق الحساب:";
+"grace_expire_date" = "تاريخ إلغاء الباقة: %@";
 "save_to_my_lifebox_not_found_placeholder" = "لم يتم العثور على الملف.";
 "signup_too_many_requests_email" = "تم طلب عدد كبير جدًا من رمز التحقق لهذا البريد الإلكتروني ، يرجى المحاولة مرة أخرى في وقت لاحق.";
 "signup_too_many_requests_msisdn" = "تم طلب عدد كبير جدًا من رمز التحقق لرقم الهاتف هذا ، يرجى المحاولة مرة أخرى في وقت لاحق.";
@@ -1969,3 +1969,4 @@
 "signup_phone_verification_title" = "التحقق من الهاتف";
 "signup_phone_verification_subtitle" = "أدخل رمز أمان الهاتف";
 "save_to_my_lifebox" = "حفظ في lifebox";
+"save_to_my_lifebox_download" = "";
