--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1962,7 +1962,7 @@
 "save_to_my_lifebox_folder_not_found" = "Нет файлов в папке.";
 "grace_banner_title" = "Платеж не Прошел!";
 "grace_banner_desc" = "Баланс вашей Дебетовой/Кредитной карты может быть недостаточным или данные вашей карты могут быть изменены.";
-"grace_expire_date" = "Дата Приостановки Действия Учетной Записи:";
+"grace_expire_date" = "Дата Отмены Пакета: %@";
 "save_to_my_lifebox_not_found_placeholder" = "Файл не найден.";
 "signup_too_many_requests_email" = "Для этой электронной почты запрошено слишком много кода подтверждения, пожалуйста, повторите попытку позже.";
 "signup_too_many_requests_msisdn" = "Для этого номера телефона запрошено слишком много кода подтверждения, пожалуйста, повторите попытку позже.";
@@ -1971,3 +1971,4 @@
 "signup_phone_verification_title" = "Проверка Телефона";
 "signup_phone_verification_subtitle" = "Введите Код Безопасности Телефона";
 "save_to_my_lifebox" = "Сохранить в lifebox";
+"save_to_my_lifebox_download" = "";
