--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1948,7 +1948,7 @@
 "save_to_my_lifebox_folder_not_found" = "Nu există fișier în folder.";
 "grace_banner_title" = "Plata nu a putut fi Procesată!";
 "grace_banner_desc" = "Este posibil ca soldul cardului dvs. de Debit/Credit să fie insuficient sau este posibil ca datele cardului dvs. să se fi modificat.";
-"grace_expire_date" = "Data Suspendării Contului:";
+"grace_expire_date" = "Data Anulării Pachetului: %@";
 "save_to_my_lifebox_not_found_placeholder" = "Fișierul nu a fost găsit.";
 "signup_too_many_requests_email" = "Au fost solicitate prea multe coduri de verificare pentru acest e-mail, vă rugăm să încercați din nou mai târziu.";
 "signup_too_many_requests_msisdn" = "Prea multe coduri de verificare solicitate pentru acest număr de telefon, încercați din nou mai târziu.";
@@ -1957,3 +1957,4 @@
 "signup_phone_verification_title" = "Verificare La Telefon";
 "signup_phone_verification_subtitle" = "Introduceți Codul De Securitate Al Telefonului";
 "save_to_my_lifebox" = "Salvați în lifebox";
+"save_to_my_lifebox_download" = "";
