--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2000,4 +2000,6 @@
 "signup_phone_verification_title" = "Verifikimi i Telefonit";
 "signup_phone_verification_subtitle" = "Futni Kodin E Sigurisë Së Telefonit";
 "save_to_my_lifebox" = "Ruaje në lifebox";
-"save_to_my_lifebox_download" = "";
+"save_to_my_lifebox_download" = "Dëshiron të shkarkosh skedarin lifebox - %@ - %@.zip?";
+"contact_sync_storage_fail_desc" = "Meqenëse ruajtja e lifebox është plot, rezervimi i kontakteve nuk do të kryhet pas operacionit \"Eksport Në Telefon\". Dëshironi të vazhdoni akoma?";
+"contact_sync_storage_fail_cont_button" = "";
