--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1969,4 +1969,6 @@
 "signup_phone_verification_title" = "التحقق من الهاتف";
 "signup_phone_verification_subtitle" = "أدخل رمز أمان الهاتف";
 "save_to_my_lifebox" = "حفظ في lifebox";
-"save_to_my_lifebox_download" = "";
+"save_to_my_lifebox_download" = "هل تريد تنزيل ملف lifebox - %@ - %@.zip؟";
+"contact_sync_storage_fail_desc" = "نظرًا لأن تخزين lifebox الخاص بك ممتلئ ، فلن يتم إجراء النسخ الاحتياطي لجهات الاتصال بعد عملية \"التصدير إلى الهاتف\". هل مازلت تريد الاستمرار؟";
+"contact_sync_storage_fail_cont_button" = "";
