--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1999,4 +1999,6 @@
 "signup_phone_verification_title" = "Verificación de Teléfono";
 "signup_phone_verification_subtitle" = "Ingrese el Código de Seguridad del Teléfono";
 "save_to_my_lifebox" = "Guardar en lifebox";
-"save_to_my_lifebox_download" = "";
+"save_to_my_lifebox_download" = "¿Desea descargar el archivo lifebox - %@ - %@.zip?";
+"contact_sync_storage_fail_desc" = "Dado que el almacenamiento de su lifebox está lleno, la copia de seguridad de los contactos no se realizará después de la operación \"Exportar Al Teléfono\". ¿Todavía quieres continuar?";
+"contact_sync_storage_fail_cont_button" = "";
