--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2262,4 +2262,6 @@ Please check I have understood the intended command here*/
 "signup_phone_verification_title" = "Vérification Par Téléphone";
 "signup_phone_verification_subtitle" = "Entrez le Code de Sécurité du Téléphone";
 "save_to_my_lifebox" = "Enregistrer dans lifebox";
-"save_to_my_lifebox_download" = "";
+"save_to_my_lifebox_download" = "Voulez-vous télécharger le fichier lifebox - %@ - %@.zip?";
+"contact_sync_storage_fail_desc" = "Étant donné que le stockage de votre lifebox est plein, la sauvegarde des contacts ne sera pas effectuée après l'opération \"Exporter Vers Le Téléphone\". Souhaitez-vous toujours continuer?";
+"contact_sync_storage_fail_cont_button" = "";
