--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1971,4 +1971,6 @@
 "signup_phone_verification_title" = "Проверка Телефона";
 "signup_phone_verification_subtitle" = "Введите Код Безопасности Телефона";
 "save_to_my_lifebox" = "Сохранить в lifebox";
-"save_to_my_lifebox_download" = "";
+"save_to_my_lifebox_download" = "Хотите скачать файл lifebox - %@ - %@.zip?";
+"contact_sync_storage_fail_desc" = "Поскольку место для хранения заполнено, невозможно сделать резервную копию контактов в lifebox после операции «Экспорт в Телефон». Все еще хотите продолжить?";
+"contact_sync_storage_fail_cont_button" = "";
