--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1982,3 +1982,5 @@
 "save_to_my_lifebox_download" = "lifebox - %@ - %@.zip dosyasını indirmek mi istiyorsunuz?";
 "contact_sync_storage_fail_desc" = "Saklama alanın dolu olduğu için “Telefon’a Aktar” işlemin sonrası lifebox’a rehber yedekleme işlemini gerçekleştiremeyeceğim. Yine de devam etmek istiyor musun?";
 "contact_sync_storage_fail_cont_button" = "Devam Et";
+"save_to_my_lifebox_full_storage_title" = "iPhone Saklama Alanı Dolu";
+"save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
