--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1972,3 +1972,5 @@
 "save_to_my_lifebox_download" = "هل تريد تنزيل ملف lifebox - %@ - %@.zip؟";
 "contact_sync_storage_fail_desc" = "نظرًا لأن تخزين lifebox الخاص بك ممتلئ ، فلن يتم إجراء النسخ الاحتياطي لجهات الاتصال بعد عملية \"التصدير إلى الهاتف\". هل مازلت تريد الاستمرار؟";
 "contact_sync_storage_fail_cont_button" = "";
+"save_to_my_lifebox_full_storage_title" = "";
+"save_to_my_lifebox_full_storage_body" = "";
