--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1960,3 +1960,5 @@
 "save_to_my_lifebox_download" = "Doriți să descărcați fișierul lifebox - %@ - %@.zip?";
 "contact_sync_storage_fail_desc" = "Deoarece spațiul de stocare lifebox este plin, copierea de rezervă a contactelor nu va fi efectuată după operațiunea „Exportare Pe Telefon”. Mai vrei să continui?";
 "contact_sync_storage_fail_cont_button" = "";
+"save_to_my_lifebox_full_storage_title" = "";
+"save_to_my_lifebox_full_storage_body" = "";
