--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1974,3 +1974,5 @@
 "save_to_my_lifebox_download" = "Хотите скачать файл lifebox - %@ - %@.zip?";
 "contact_sync_storage_fail_desc" = "Поскольку место для хранения заполнено, невозможно сделать резервную копию контактов в lifebox после операции «Экспорт в Телефон». Все еще хотите продолжить?";
 "contact_sync_storage_fail_cont_button" = "";
+"save_to_my_lifebox_full_storage_title" = "";
+"save_to_my_lifebox_full_storage_body" = "";
