--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1962,3 +1962,5 @@
 "save_to_my_lifebox_download" = "Бажаєте завантажити файл lifebox - %@ - %@.zip?";
 "contact_sync_storage_fail_desc" = "Оскільки ваша пам’ять lifebox заповнена, резервне копіювання контактів не буде виконано після операції «Експорт на телефон». Все ще хочете продовжити?";
 "contact_sync_storage_fail_cont_button" = "";
+"save_to_my_lifebox_full_storage_title" = "";
+"save_to_my_lifebox_full_storage_body" = "";
