--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1984,3 +1984,4 @@
 "contact_sync_storage_fail_cont_button" = "Devam Et";
 "save_to_my_lifebox_full_storage_title" = "iPhone Saklama Alanı Dolu";
 "save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
+"places_map_title" = "";
