--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1959,6 +1959,7 @@
 "save_to_my_lifebox" = "In Der lifebox Speichern";
 "save_to_my_lifebox_download" = "Möchten Sie die Datei lifebox - %@ - %@.zip herunterladen?";
 "contact_sync_storage_fail_desc" = "Da Ihr Lifebox-Speicher voll ist, wird nach dem Vorgang „Auf Telefon exportieren“ keine Kontaktsicherung durchgeführt. Möchten Sie trotzdem fortfahren?";
-"contact_sync_storage_fail_cont_button" = "";
-"save_to_my_lifebox_full_storage_title" = "";
-"save_to_my_lifebox_full_storage_body" = "";
+"contact_sync_storage_fail_cont_button" = "Fortsetzen";
+"save_to_my_lifebox_full_storage_title" = "iPhone-Speicher Voll";
+"save_to_my_lifebox_full_storage_body" = "Sie können Speicherplatz auf diesem iPhone freigeben, indem Sie Ihren Speicherplatz in den Einstellungen verwalten.";
+"places_map_title" = "";
