--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2264,6 +2264,7 @@ Please check I have understood the intended command here*/
 "save_to_my_lifebox" = "Enregistrer dans lifebox";
 "save_to_my_lifebox_download" = "Voulez-vous télécharger le fichier lifebox - %@ - %@.zip?";
 "contact_sync_storage_fail_desc" = "Étant donné que le stockage de votre lifebox est plein, la sauvegarde des contacts ne sera pas effectuée après l'opération \"Exporter Vers Le Téléphone\". Souhaitez-vous toujours continuer?";
-"contact_sync_storage_fail_cont_button" = "";
-"save_to_my_lifebox_full_storage_title" = "";
-"save_to_my_lifebox_full_storage_body" = "";
+"contact_sync_storage_fail_cont_button" = "Continuer";
+"save_to_my_lifebox_full_storage_title" = "Stockage Complet de l'iPhone";
+"save_to_my_lifebox_full_storage_body" = "Vous pouvez libérer de l'espace sur cet iPhone en gérant votre espace de stockage dans Paramètres.";
+"places_map_title" = "";
