--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1961,6 +1961,7 @@
 "save_to_my_lifebox" = "Зберегти у lifebox";
 "save_to_my_lifebox_download" = "Бажаєте завантажити файл lifebox - %@ - %@.zip?";
 "contact_sync_storage_fail_desc" = "Оскільки ваша пам’ять lifebox заповнена, резервне копіювання контактів не буде виконано після операції «Експорт на телефон». Все ще хочете продовжити?";
-"contact_sync_storage_fail_cont_button" = "";
-"save_to_my_lifebox_full_storage_title" = "";
-"save_to_my_lifebox_full_storage_body" = "";
+"contact_sync_storage_fail_cont_button" = "Продовжуй";
+"save_to_my_lifebox_full_storage_title" = "Пам'ять iPhone Повна";
+"save_to_my_lifebox_full_storage_body" = "Ви можете звільнити місце на цьому iPhone, керуючи зберіганням у Налаштуваннях.";
+"places_map_title" = "";
