--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1963,3 +1963,4 @@
 "save_to_my_lifebox_full_storage_title" = "Stocare iPhone Plină";
 "save_to_my_lifebox_full_storage_body" = "Puteți elibera spațiu pe acest iPhone gestionând zona de stocare în Setări.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
