--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2006,3 +2006,4 @@
 "save_to_my_lifebox_full_storage_title" = "Hapësira Ruajtëse e iPhone Është e Plotë";
 "save_to_my_lifebox_full_storage_body" = "Mund të lironi hapësirë në këtë iPhone duke menaxhuar zonën tuaj të ruajtjes te Cilësimet.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
