--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1965,3 +1965,4 @@
 "save_to_my_lifebox_full_storage_title" = "Пам'ять iPhone Повна";
 "save_to_my_lifebox_full_storage_body" = "Ви можете звільнити місце на цьому iPhone, керуючи зберіганням у Налаштуваннях.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
