--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1975,3 +1975,4 @@
 "save_to_my_lifebox_full_storage_title" = "مساحة تخزين iPhone ممتلئة";
 "save_to_my_lifebox_full_storage_body" = "يمكنك تفريغ مساحة على جهاز iPhone هذا عن طريق إدارة مساحة التخزين الخاصة بك في الإعدادات.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
