--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1963,3 +1963,4 @@
 "save_to_my_lifebox_full_storage_title" = "iPhone-Speicher Voll";
 "save_to_my_lifebox_full_storage_body" = "Sie können Speicherplatz auf diesem iPhone freigeben, indem Sie Ihren Speicherplatz in den Einstellungen verwalten.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
