--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2005,3 +2005,4 @@
 "save_to_my_lifebox_full_storage_title" = "Almacenamiento De İphone Lleno";
 "save_to_my_lifebox_full_storage_body" = "Puede liberar espacio en este iPhone administrando su área de almacenamiento en Configuración.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
