--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1977,3 +1977,4 @@
 "save_to_my_lifebox_full_storage_title" = "Область Хранения iPhone Заполнена";
 "save_to_my_lifebox_full_storage_body" = "Вы можете освободить место на этом iPhone, управляя областью хранения в Настройках.";
 "places_map_title" = "";
+"map_location_detail_header" = "";
