LB-185 Beeline Georgia

--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -1963,3 +1963,4 @@
 "save_to_my_lifebox_full_storage_title" = "";
 "save_to_my_lifebox_full_storage_body" = "";
 "places_map_title" = "";
+"map_location_detail_header" = "";
