--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2013,3 +2013,4 @@
 "save_to_my_lifebox_full_storage_title" = "iPhone Storage Full";
 "save_to_my_lifebox_full_storage_body" = "You can free up space on this iPhone by managing your storage in Settings.";
 "places_map_title" = "Map";
+"map_location_detail_header" = "Photos at this location";
