LB-218 Security Info Popup
localizing

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1976,3 +1976,6 @@
 "save_to_my_lifebox_full_storage_body" = "يمكنك تفريغ مساحة على جهاز iPhone هذا عن طريق إدارة مساحة التخزين الخاصة بك في الإعدادات.";
 "places_map_title" = "";
 "map_location_detail_header" = "";
+"beeline_feature_cancel_TC" = "";
+"security_popup_body" = "";
+"security_popup_header" = "";
