--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1964,3 +1964,6 @@
 "save_to_my_lifebox_full_storage_body" = "Puteți elibera spațiu pe acest iPhone gestionând zona de stocare în Setări.";
 "places_map_title" = "";
 "map_location_detail_header" = "";
+"beeline_feature_cancel_TC" = "";
+"security_popup_body" = "";
+"security_popup_header" = "";
