--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2007,3 +2007,6 @@
 "save_to_my_lifebox_full_storage_body" = "Mund të lironi hapësirë në këtë iPhone duke menaxhuar zonën tuaj të ruajtjes te Cilësimet.";
 "places_map_title" = "";
 "map_location_detail_header" = "";
+"beeline_feature_cancel_TC" = "";
+"security_popup_body" = "";
+"security_popup_header" = "";
