--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1986,3 +1986,6 @@
 "save_to_my_lifebox_full_storage_body" = "Saklama alanınızı Ayarlar'da yöneterek bu iPhone'da yer açabilirsiniz.";
 "places_map_title" = "";
 "map_location_detail_header" = "";
+"beeline_feature_cancel_TC" = "";
+"security_popup_body" = "Şifenizi unuttuğunuzda yenileyebilmek için aşağıdaki bilgilerden en az birini giriniz";
+"security_popup_header" = "Güvenlik sorusu veya Kurtarma e-postanı belirle";
