LB-218 Security Info Popup

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1979,3 +1979,7 @@
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "";
 "security_popup_header" = "";
+"save_to_my_billo" = "";
+"save_to_my_billo_download" = "";
+"on_boarding_btn_google_login" = "";
+"on_boarding_or" = "";
