--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1987,5 +1987,9 @@
 "places_map_title" = "";
 "map_location_detail_header" = "";
 "beeline_feature_cancel_TC" = "";
-"security_popup_body" = "Şifenizi unuttuğunuzda yenileyebilmek için aşağıdaki bilgilerden en az birini giriniz";
-"security_popup_header" = "Güvenlik sorusu veya Kurtarma e-postanı belirle";
+"security_popup_body" = "Şifreni unutman halinde hesabını kolayca kurtarabilmek için lütfen en az 1 alanı gir";
+"security_popup_header" = "Kurtarma E-postanı ya da Güvenlik Sorunu Belirle";
+"save_to_my_billo" = "Billo'ya Kaydet";
+"save_to_my_billo_download" = "Billo - %@ - %@.zip dosyasını indirmek mi istiyorsunuz?";
+"on_boarding_btn_google_login" = "";
+"on_boarding_or" = "";
