--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2272,3 +2272,7 @@ Please check I have understood the intended command here*/
 "beeline_feature_cancel_TC" = "";
 "security_popup_body" = "";
 "security_popup_header" = "";
+"save_to_my_billo" = "";
+"save_to_my_billo_download" = "";
+"on_boarding_btn_google_login" = "";
+"on_boarding_or" = "";
